--- a/404.md
+++ b/404.md
@@ -1,5 +1,9 @@
 ---
 permalink: /404.html
 ---
+Hello!
+======
 
-<p> hi <p>
+Test... Test!
+
+[Click here for something cool!](/assets/images/rickrolled.jpg)
