--- a/404.md
+++ b/404.md
@@ -1,9 +1,11 @@
 ---
 permalink: /404.html
 ---
-Hello!
+404 - Page Not Found
 ======
 
-Test... Test!
+We looked everywhere but we couldn't find this page! Now THAT's a problem.
+_Error: 404 (Page Not Found)_
 
-[Click here for something cool!](/assets/images/rickrolled.jpg)
+[Go Home] (/index.html)
+[View Sitemap](/sitemap.xml)
