--- a/404.md
+++ b/404.md
@@ -4,8 +4,9 @@ permalink: /404.html
 404 - Page Not Found
 ======
 
-We looked everywhere but we couldn't find this page! Now THAT's a problem.
+We looked everywhere but we couldn't find this page! Now THAT's a problem.\
 _Error: 404 (Page Not Found)_
 
-[Go Home] (/index.html)
+
+[Go Home](/index.html)\
 [View Sitemap](/sitemap.xml)
