--- a/404.md
+++ b/404.md
@@ -4,11 +4,4 @@ permalink: /404.html
 Page Not Found
 ======
 
-We looked everywhere but we couldn't find this page! Now THAT'S a problem.  
-  
-_Error: 404 (Page Not Found)_
-\
-\
-\
-[Go Home](/index.html)  
-[View Sitemap](/sitemap.xml)
+Error 404: Page Not Found
