--- a/404.md
+++ b/404.md
@@ -1,7 +1,14 @@
 ---
 permalink: /404.html
 ---
-Page Not Found
-======
+Whoops! {.center .main}
+=======
 
-Error 404: Page Not Found
+### 404 Page Not Found {.center .main .large .no-marg}
+
+![Dogs on Vacation](https://media.coschedule.com/uploads/vacation-1.gif)
+
+Looks like this page went on vacation. {.center .small .no-marg}
+--------------------------------------
+
+Try our [homepage](/) instead.
