--- a/404.md
+++ b/404.md
@@ -6,8 +6,8 @@ Whoops! {.center .main}
 
 ### 404 Page Not Found {.center .main .large .no-marg}
 
-<video
-  <source src="/assets/media/videos/404-pnf.mp4" type="video/mp4">
+<video width="320" height="240" controls>
+  <source src="/assets/media/videos/404-pnf.mp4" type="video/mp4v" type="video/mp4">
 </video>
 
 ![Dogs on Vacation](https://media.coschedule.com/uploads/vacation-1.gif)
