--- a/404.md
+++ b/404.md
@@ -7,7 +7,7 @@ Whoops! {.center .main}
 ### 404 Page Not Found {.center .main .large .no-marg}
 
 <video width="320" height="240" controls>
-  <source src="/assets/media/videos/404-pnf.mp4" type="video/mp4v" type="video/mp4">
+  <source src="/assets/media/videos/404-pnf.mp4" type="video/mp4">
 </video>
 
 ![Dogs on Vacation](https://media.coschedule.com/uploads/vacation-1.gif)
