--- a/404.md
+++ b/404.md
@@ -6,9 +6,10 @@ Whoops! {.center .main}
 
 ### 404 Page Not Found {.center .main .large .no-marg}
 
-<video width="320" height="240" controls>
-  <source src="/assets/media/videos/404-pnf.mp4" type="video/mp4">
-</video>
+<div class="bound">
+    <video class="e404_img" autoplay="" muted="" playsinline="" src="https://static-mh.content.disney.io/matterhorn/assets/errors/e404_main_video-eac5362f8f95.mp4" type="video/mp4"></video>
+    <h2 class="e404_message">You didn’t break the internet, but we can’t find what you are looking for.</h2>
+  </div>
 
 ![Dogs on Vacation](https://media.coschedule.com/uploads/vacation-1.gif)
 
