--- a/404.md
+++ b/404.md
@@ -4,16 +4,13 @@ permalink: /404.html
 Whoops! {.center .main}
 =======
 
-### 404 Page Not Found {.center .main .large .no-marg}
+### Error 404: Page Not Found
 
 <div class="bound">
     <video class="e404_img" autoplay="" muted="" playsinline="" src="/assets/media/videos/404-pnf.mp4" type="video/mp4"></video>
     <h2 class="e404_message">You didn’t break the internet, but we can’t find what you are looking for.</h2>
   </div>
 
-![Dogs on Vacation](https://media.coschedule.com/uploads/vacation-1.gif)
-
-Looks like this page went on vacation. {.center .small .no-marg}
 --------------------------------------
 
 Try our [homepage](/) instead.
