--- a/404.md
+++ b/404.md
@@ -7,8 +7,8 @@ Whoops! {.center .main}
 ### Error 404: Page Not Found
 
 <div class="bound">
-    <video class="e404_img" autoplay="" muted="" playsinline="" src="/assets/media/videos/404-pnf.mp4" type="video/mp4"></video>
-    <h2 class="e404_message">You didn’t break the internet, but we can’t find what you are looking for.</h2>
+    <video class="center" autoplay="" muted="" playsinline="" src="/assets/media/videos/404-pnf.mp4" type="video/mp4"></video>
+    <h2 class="center">You didn’t break the internet, but we can’t find what you're looking for.</h2>
   </div>
 
 --------------------------------------
