--- a/404.md
+++ b/404.md
@@ -4,11 +4,25 @@ permalink: /404.html
 Whoops!
 =======
 
-### Error 404: Page Not Found
+<html>
+
+<head>
+<style>
+h1 {text-align: center;}
+h2 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
+<body>
+
+</html>
+
+<h1>Error 404: Page Not Found</h1>
 
 <div class="bound">
-    <video class="center" autoplay="" muted="" playsinline="" src="/assets/media/videos/404-pnf.mp4" type="video/mp4"></video>
-    <h2 class="center">You didn’t break the internet, but we can’t find what you're looking for.</h2>
+    <video autoplay="" muted="" playsinline="" src="/assets/media/videos/404-pnf.mp4" type="video/mp4"></video>
+    <h2>You didn’t break the internet, but we can’t find what you're looking for.</h2>
   </div>
 
 --------------------------------------
