--- a/404.md
+++ b/404.md
@@ -1,11 +1,10 @@
 ---
 permalink: /404.html
 ---
-Whoops!
+Error 404: Page Not Found!
 =======
 
 <html>
-
 <head>
 <style>
 h1 {text-align: center;}
@@ -16,15 +15,12 @@ div {text-align: center;}
 </head>
 <body>
 
-</html>
-
-<h1>Error 404: Page Not Found</h1>
+<h1>Whoops!</h1>
 
 <div class="bound">
     <video autoplay="" muted="" playsinline="" src="/assets/media/videos/404-pnf.mp4" type="video/mp4"></video>
-    <h2>You didn’t break the internet, but we can’t find what you're looking for.</h2>
+    <h2>You didn’t break the internet, but we can’t find what you're looking for</h2>
   </div>
 
---------------------------------------
 
-Try our [homepage](/) instead.
+<p><a href="/">Try our homepage instead</a></p>
