--- a/404.md
+++ b/404.md
@@ -15,10 +15,8 @@ div {text-align: center;}
 </head>
 <body>
 
-<h1>Whoops!</h1>
-
-<div class="bound">
-    <video autoplay="" muted="" playsinline="" src="/assets/media/videos/404-pnf.mp4" type="video/mp4"></video>
+<div>
+    <p><img src="/assets/media/images/404-pnf.gif" alt="" /></p>
     <h2>You didn’t break the internet, but we can’t find what you're looking for</h2>
   </div>
 <br>
