--- a/404.md
+++ b/404.md
@@ -16,8 +16,8 @@ div {text-align: center;}
 <body>
 
 <div>
-    <p><video src="/assets/media/videos/404-pnf.mp4" alt="" /></p>
-    <h2>You didn’t break the internet, but we can’t find what you're looking for</h2>
+    <p><video src="/assets/media/images/404-pnf.gif" alt="" /></p>
+    <h2>You didn’t break the internet, but we can’t find what you're looking for.</h2>
   </div>
 <br>
 <br>
