--- a/404.md
+++ b/404.md
@@ -15,10 +15,5 @@ div {text-align: center;}
 </head>
 <body>
 
-<div>
-    <p><video src="/assets/media/images/404-pnf.gif" alt="" /></p>
-    <h2>You didn’t break the internet, but we can’t find what you're looking for.</h2>
-  </div>
-<br>
-<br>
-<p><a href="/">Try our homepage instead</a></p>
+<h1 class="jsx-1138300191 not-found"><span class="jsx-1138300191">4</span><span class="jsx-1138300191 hidden">0</span><img src="https://sf16-scmcdn-va.ibytedtos.com/goofy/tiktok/web/node/_next/static/images/404_face_icon-dc432020df235d848f4b552556cb72f9.png" alt="0" class="jsx-1138300191"><span class="jsx-1138300191">4</span></h1>
+<p class="jsx-1138300191 not-found-desc">Couldn't find this page</p>
