--- a/404.md
+++ b/404.md
@@ -15,4 +15,4 @@ div {text-align: center;}
 </head>
 <body>
 
-<div id="content" data-background="https://a.slack-edge.com/80588/img/404/marrakesh-meadow-80.jpg" style="height: 763.465px;"><img id="background" src="https://a.slack-edge.com/80588/img/404/marrakesh-meadow-80.jpg" style="transform: translate3d(-31.2395%, 0px, 0px);"><div id="sprite-wrapper" style="width: 4580.79px; transform: translate3d(-31.2395%, 0px, 0px);"><div class="sprite piggy piggy_chewing active" style="transform: scale3d(0.763465, 0.763465, 0.763465); margin-bottom: -6.77198px;"></div><div class="sprite chicken chicken_walk_lr" style="transform: scale3d(0.763465, 0.763465, 0.763465); margin-bottom: -6.77198px;"><div class="sub_sprite"></div></div><div class="sprite chicken chicken_peck_2x flipped pecking" style="transform: scale3d(0.763465, 0.763465, 0.763465) scaleX(-1); margin-bottom: -6.77198px;"></div><div class="sprite piggy piggy_walk piggy_walk_lr" style="transform: scale3d(0.763465, 0.763465, 0.763465); margin-bottom: -6.77198px;"></div><div class="sprite chicken chicken_walk_rl flipped" style="transform: scale3d(0.763465, 0.763465, 0.763465) scaleX(-1); margin-bottom: -6.77198px;"><div class="sub_sprite"></div></div><div class="sprite piggy piggy_walk flipped piggy_walk_rl" style="transform: scale3d(0.763465, 0.763465, 0.763465) scaleX(-1); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_angle butterfly_angle_lr" style="transform: scale3d(0.763465, 0.763465, 0.763465); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_angle_1 butterfly_angle_1_lr" style="transform: scale3d(0.763465, 0.763465, 0.763465); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_rooked butterfly_rooked_lr" style="transform: scale3d(0.763465, 0.763465, 0.763465); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_side butterfly_side_lr" style="transform: scale3d(0.763465, 0.763465, 0.763465); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_angle flipped butterfly_angle_rl bottom" style="transform: scale3d(0.763465, 0.763465, 0.763465) scaleX(-1); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_angle_1 flipped butterfly_angle_1_rl bottom" style="transform: scale3d(0.763465, 0.763465, 0.763465) scaleX(-1); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_rooked flipped butterfly_rooked_rl bottom" style="transform: scale3d(0.763465, 0.763465, 0.763465) scaleX(-1); margin-bottom: -6.77198px;"></div><div class="sprite butterfly butterfly_side flipped butterfly_side_rl bottom" style="transform: scale3d(0.763465, 0.763465, 0.763465) scaleX(-1); margin-bottom: -6.77198px;"></div></div></div>
+<div id="content" data-background="https://andrew-j-chen.github.io/assets/media/images/404-pnf.jpg"
