--- a/404.md
+++ b/404.md
@@ -15,4 +15,4 @@ div {text-align: center;}
 </head>
 <body>
 
-<div id="content"> data-background="https://andrew-j-chen.github.io/assets/media/images/404-pnf.jpg"</div>
+<div id="content"> data-background="/assets/media/images/404-pnf.png"</div>
