--- a/404.md
+++ b/404.md
@@ -15,4 +15,4 @@ div {text-align: center;}
 </head>
 <body>
 
-<div id="content"> data-background="/assets/media/images/404-pnf.png"</div>
+<iframe src="/assets/media/images/404-pnf.png"</iframe>
