--- a/404.md
+++ b/404.md
@@ -15,4 +15,4 @@ div {text-align: center;}
 </head>
 <body>
 
-<iframe src="/assets/media/images/404-pnf.png"</iframe>
+<iframe src="https://andrew-j-chen.github.io/assets/media/images/404-pnf.png"</iframe>
