--- a/404.md
+++ b/404.md
@@ -15,4 +15,5 @@ div {text-align: center;}
 </head>
 <body>
 
-<img src="https://andrew-j-chen.github.io/assets/media/images/404-pnf.png"></img>
+<div style="background-image: url('/assets/media/images/404-pnf.png');">
+<img src="/assets/media/images/404-pnf.png"></img>
