--- a/404.md
+++ b/404.md
@@ -15,5 +15,4 @@ div {text-align: center;}
 </head>
 <body>
 
-<div style="background-image: url('/assets/media/images/404-pnf.png');">
-<img src="/assets/media/images/404-pnf.png"></img>
+<img src="/assets/media/images/404-pnf.png">
