--- a/404.md
+++ b/404.md
@@ -5,6 +5,67 @@ Page Not Found
 =======
 
 <html>
-<div style="text-align:center;">
-<svg height="auto" viewBox="0 0 58 46" width="auto" xmlns="http://www.w3.org/2000/svg"><g id="Page-1" fill="none" fill-rule="evenodd"><g id="037---404-Page" fill-rule="nonzero"><path id="Shape" d="m6 46h-2c-2.209139 0-4-1.790861-4-4v-38c0-2.209139 1.790861-4 4-4h50c2.209139 0 4 1.790861 4 4v38c0 2.209139-1.790861 4-4 4z" fill="#35495e"/><path id="Shape" d="m58 4v4h-58v-4c0-2.209139 1.790861-4 4-4h50c2.209139 0 4 1.790861 4 4z" fill="#3b97d3"/><path id="Shape" d="m32 3h-6c-.5522847 0-1 .44771525-1 1s.4477153 1 1 1h6c.5522847 0 1-.44771525 1-1s-.4477153-1-1-1z" fill="#2980ba"/><path id="Shape" d="m54 3h-11c-.5522847 0-1 .44771525-1 1s.4477153 1 1 1h11c.5522847 0 1-.44771525 1-1s-.4477153-1-1-1z" fill="#2980ba"/><circle id="Oval" cx="4" cy="4" fill="#ff5364" r="1"/><circle id="Oval" cx="8" cy="4" fill="#f0c419" r="1"/><circle id="Oval" cx="12" cy="4" fill="#65ddb9" r="1"/><g fill="#e64c3c"><path id="Shape" d="m17 31c0 .5522847.4477153 1 1 1s1-.4477153 1-1v-2h2c.5522847 0 1-.4477153 1-1s-.4477153-1-1-1h-2v-2c0-.5522847-.4477153-1-1-1s-1 .4477153-1 1v2h-5.211l7.063-11.476c.2539327-.4666582.0986357-1.0504199-.3536085-1.3292152-.4522443-.2787953-1.0435494-.1552918-1.3463915.2812152l-7.066 11.477c-.37917312.6171256-.39505786 1.3910301-.041527 2.0231948.3535309.6321646 1.0212231 1.0237866 1.745527 1.0238052h5.21z"/><path id="Shape" d="m47 27h-2v-2c0-.5522847-.4477153-1-1-1s-1 .4477153-1 1v2h-5.211l7.063-11.476c.2110153-.3041508.2367456-.6999905.0668803-1.0288992-.1698654-.3289087-.5075332-.537071-.8776942-.5410726s-.71225.1968122-.8891861.5219718l-7.066 11.477c-.3791731.6171256-.3950579 1.3910301-.041527 2.0231948.3535309.6321646 1.0212231 1.0237866 1.745527 1.0238052h5.21v2c0 .5522847.4477153 1 1 1s1-.4477153 1-1v-2h2c.5522847 0 1-.4477153 1-1s-.4477153-1-1-1z"/><path id="Shape" d="m28 32h2c2.209139 0 4-1.790861 4-4v-10c0-2.209139-1.790861-4-4-4h-2c-2.209139 0-4 1.790861-4 4v10c0 2.209139 1.790861 4 4 4zm-2-14c0-1.1045695.8954305-2 2-2h2c1.1045695 0 2 .8954305 2 2v10c0 1.1045695-.8954305 2-2 2h-2c-1.1045695 0-2-.8954305-2-2z"/></g><path id="Shape" d="m41 37h-24c-.5522847 0-1 .4477153-1 1s.4477153 1 1 1h24c.5522847 0 1-.4477153 1-1s-.4477153-1-1-1z" fill="#c03a2b"/><path id="Shape" d="m32 41h-6c-.5522847 0-1 .4477153-1 1s.4477153 1 1 1h6c.5522847 0 1-.4477153 1-1s-.4477153-1-1-1z" fill="#c03a2b"/></g></g></svg></div>
+<head>
+  <title>Page Not Found (404)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  body {
+    background-color: #EFEFEF;
+    color: #2E2F30;
+    text-align: center;
+    font-family: arial, sans-serif;
+    margin: 0;
+  }
+
+  div.dialog {
+    width: 95%;
+    max-width: 33em;
+    margin: 4em auto 0;
+  }
+
+  div.dialog > div {
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
+    border-bottom-color: #BBB;
+    border-top: #B00100 solid 4px;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    background-color: white;
+    padding: 7px 12% 0;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+
+  h1 {
+    font-size: 100%;
+    color: #730E15;
+    line-height: 1.5em;
+  }
+
+  div.dialog > p {
+    margin: 0 0 1em;
+    padding: 1em;
+    background-color: #F7F7F7;
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
+    border-bottom-color: #999;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-color: #DADADA;
+    color: #666;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+  </style>
+</head>
+
+<body>
+  <div class="dialog">
+    <div>
+      <h1>The page you were looking for doesn't exist.</h1>
+      <p>You may have mistyped the address or the page may have moved.</p>
+    </div>
+    <p>Error 404: Page Not Found<br>andrew-j-chen.github.io</p>
+  </div>
+</body>
 </html>
