--- a/404.md
+++ b/404.md
@@ -77,8 +77,8 @@
 <div>
     <h1>Redirecting you Now!</h1>
     <p>This website has been moved. Redirecting you to the new one now!</p>
-    <p><a href="https://ajc.glitch.me/">Redirect not working? Click here!</a></p>
-	  <meta http-equiv="Refresh" content="0; url='https://ajc.glitch.me/'" />
+    <p><a href="https://www.andrewjchen.com/">Redirect not working? Click here!</a></p>
+	  <meta http-equiv="Refresh" content="0; url='https://www.andrewjchen.com/'" />
 </div>
 </body>
 </html>
